Fix katex overflow-y

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -65,4 +65,5 @@
 
 .katex-display {
   overflow-x: auto;
+  overflow-y: hidden;
 }
